--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
         #continue-on-error: true
       - name: Run testing
         run: |
-          pipenv run pytest tests --cov-config pytest.cov --cov
+          pipenv run pytest --cov-config pytest.cov --cov
         #continue-on-error: true
         if: always()
         env:
